# DeepLoopShaping_SinglePendulum

./: .gitignore  .gitmodules  2.README.md  3.README.md  README.md  deepmind_mpo.ipynb  gaussian_mujoco.ipynb  mpo_asd_comparison.ipynb  mpo_ligo_training.ipynb  mpo_pitch_control.ipynb  pendulum_env.py  pendulum_gym_SAC.ipynb  pendulum_simple.xml  pyproject.toml  render_policy.py  simple_gausian_v2 copy.ipynb  simple_gausian_v2.ipynb  simple_gaussian copy.ipynb  simple_gaussian.ipynb  simulation_loop.py  strain_sensitivity_freq_domain.ipynb  test.ipynb  test_env.py  test_hanging_pendulum.py  watch_policy.py
.neptune/async/run__a0c90d83-d814-4750-bdc9-e7ea40e1ddaf__6630__q8y5hk4p/: metadata.json
.neptune/async/run__a0c90d98-d132-4331-a67a-a99d26ac9467__6630__r4cav7mv/: metadata.json
.neptune/async/run__a0c91254-99e3-4b5a-b4bb-caef30fe2116__7808__uaxv09i2/: metadata.json
.neptune/async/run__a0c92883-75df-4ed8-bb20-95f9d11ca322__7808__9yiwsqms/: metadata.json
.neptune/async/run__a0c982b0-ceb6-44ee-b145-64c61814685a__21568__hd6wbiis/: metadata.json
src/rl_arush/: __init__.py
src/rl_arush.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rl_arush/envs/: __init__.py  ligo_asc_env.py  pendulum_inverted.py
src/rl_arush/lightsaber/: __init__.py  plotting.py  simulator.py
working_notebooks/: lightsaber_test.ipynb  path_test.ipynb
