[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_arush"
version = "0.1.0"
description = "Deep Loop Shaping for Pendulum Control"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gymnasium",
    "numpy",
    "mujoco",
    "h5py",
    "pandas",
    "scipy",
    "matplotlib",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.xml", "*.yaml", "*.csv", "*.txt"]
